<?xml version="1.0"?>
<package>
  <name>robik</name>
  <version>0.9.0</version>
  <description>Driver for Robik the Robot</description>
  <maintainer email="slesinger@gmail.com">honza</maintainer>
  <license>MIT</license>
  <url type="website">https://robot.slesinger.info</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>sound_play</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>