<?xml version="1.0"?>
<package format="2">
  <name>robik_description</name>
  <version>0.9.0</version>
  <description>
    3D models of the Robik for simulation and visualization
  </description>
  <license>MIT</license>
  <author email="slesinger@gmail.com">Honza Slesinger</author>
  <maintainer email="slesinger@gmail.com">Slesinger</maintainer>
  <url type="website">https://robot.slesinger.info</url>
  <url type="emanual">https://github.com/slesinger/robik/wiki</url>
  <url type="repository">https://github.com/slesinger/robik.git</url>
  <url type="bugtracker">https://github.com/slesinger/robik/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
