<?xml version="1.0"?>
<package format="2">
  <name>robik_gazebo</name>
  <version>0.9.0</version>
  <description>
    Robik simulation package
  </description>
  <license>MIT</license>
  <author email="slesinger@gmail.com">Honza Slesinger</author>
  <maintainer email="slesinger@gmail.com">Slesinger</maintainer>
  <url type="website">https://robot.slesinger.info</url>
  <url type="emanual">https://github.com/slesinger/robik/wiki</url>
  <url type="repository">https://github.com/slesinger/robik.git</url>
  <url type="bugtracker">https://github.com/slesinger/robik/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
